fix unwanted white space

--- a/src/scss/_categories.scss
+++ b/src/scss/_categories.scss
@@ -14,13 +14,13 @@
   }
   &-products {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly ;
     margin-top: 50px;
     // border:1px solid red;
     gap: 60px;
   }
   &-product {
-    max-width: 30%;
+    max-width: 43%;
     // max-height:400px;
     // border: 1px solid yellow;
     &-img {
