--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,6 +1,6 @@
 .header {
-  ion-icon{
-    font-size:1.5em;
+  ion-icon {
+    font-size: 1.5em;
   }
   &-container {
     margin: 0px 43px;
@@ -18,15 +18,15 @@
   }
   &-icon {
     position: relative;
-    
+
     // font-size: 1.3em;
   }
-  &-logo{
+  &-logo {
     max-width: 175px;
 
     // border:1px solid red;
     // text-align: center;
-    img{
+    img {
       width: 100%;
       display: block;
     }
@@ -50,7 +50,7 @@
   //   border: 1px solid red;
   background-color: $product-btn-line-color;
   color: white;
-  font-size:0.5em
+  font-size: 0.5em;
 }
 .popup {
   position: relative;
@@ -75,8 +75,7 @@
   top: 125%;
   left: 40%;
   margin-left: -80px;
-  font-size:1.1em;
-
+  font-size: 1.1em;
 }
 
 /* Popup arrow */
@@ -84,32 +83,31 @@
   content: "";
   position: absolute;
   top: -15%;
-  font-size:1em;
+  font-size: 1em;
   left: 50%;
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
   border-color: #555 transparent transparent transparent;
 }
-.popuptext{
-  font-size:0.5em !important;
-  
+.popuptext {
+  font-size: 0.5em !important;
 }
-.popupquantity{
+.popupquantity {
   position: absolute;
-    top: -3px;
-    right: -5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // border:1px solid red;
-    border-radius: 50%;
-    // padding:2px;
-    font-size:0.8em;
-    color:white;
-    background: $quotes-color;
-    height: 19px;
-    width: 19px;
+  top: -3px;
+  right: -5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // border:1px solid red;
+  border-radius: 50%;
+  // padding:2px;
+  font-size: 0.8em;
+  color: white;
+  background: $quotes-color;
+  height: 19px;
+  width: 19px;
 }
 
 /* Toggle this class - hide and show the popup */
@@ -135,16 +133,15 @@
     opacity: 1;
   }
 }
-@include forMobie{
-  .header{
-    // margin:0 10px;
-    &-container{
-        // border:1px solid red;
-        padding:37px 0px;
-        gap:20px;
+@include forMobie {
+  .header {
+    &-container {
+      // border:1px solid red;
+
+      padding: 37px 0px;
+      gap: 20px;
     }
-    &-icon{
-      
+    &-icon {
     }
   }
 }
